# omh-shim

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  schema-drift.yml  test.yml
docs/: adding-a-source.md
docs/mappings/: ieee-1752-header.md  oura_raw.md  ow_normalized.md
docs/plans/: 2026-04-09-omh-shim-v0.1.md
docs/specs/: 2026-04-09-omh-shim-design.md
omh_shim/: __init__.py  _dispatch.py  _helpers.py  _schema_loader.py  _validate.py  errors.py
omh_shim/schemas/: README.md  _pinned.json  omh_heart-rate-variability_1-0.json
omh_shim/schemas/data/: ieee_sleep-stage-summary_1-0.json  omh_body-weight_3-0.json  omh_forced-expiratory-volume-1-second_1-0.json  omh_forced-vital-capacity_1-0.json  omh_sleep-episode_1-1.json
omh_shim/schemas/metadata/: data-point-1.0.json  data-series-1.0.json  header-1.0.json  schema-id-1.0.json
omh_shim/schemas/utility/: body-posture-1.0.json  descriptive-statistic-denominator-1.0.json  duration-unit-value-range-1.0.json  frequency-unit-value-1.0.json  percent-unit-value-1.0.json  specimen-source-2.x.json  temperature-unit-value-1.0.json  temporal-relationship-to-meal-1.x.json  unit-value-range-1.0.json
omh_shim/sources/: __init__.py  _common.py  oura_raw.py  ow_normalized.py
omh_shim/sources/oura_raw/: __init__.py  heart_rate.py  heart_rate_variability.py  physical_activity.py  sleep_duration.py  sleep_episode.py  step_count.py
omh_shim/sources/ow_normalized/: __init__.py  heart_rate.py  heart_rate_variability.py  physical_activity.py  sleep_duration.py  sleep_episode.py  step_count.py
tests/: test_core.py  test_omh_shim.py  test_oura_raw.py  test_ow_normalized.py  test_refresh_schemas.py  test_schema_coverage.py  test_sources.py
tests/fixtures/oura_raw/: heart_rate_expected.json  heart_rate_input.json  heart_rate_variability_expected.json  heart_rate_variability_input.json  oxygen_saturation_expected.json  oxygen_saturation_input.json  physical_activity_expected.json  physical_activity_input.json  sleep_duration_expected.json  sleep_duration_input.json  sleep_episode_expected.json  sleep_episode_input.json  step_count_expected.json  step_count_input.json
tests/fixtures/ow_normalized/: heart_rate_expected.json  heart_rate_input.json  heart_rate_variability_input.json  oxygen_saturation_expected.json  oxygen_saturation_input.json  physical_activity_expected.json  physical_activity_input.json  sleep_duration_expected.json  sleep_duration_input.json  sleep_episode_expected.json  sleep_episode_input.json  step_count_input.json
tools/: refresh_schemas.py
