[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omh-shim"
version = "0.1.0.dev0"
description = "Convert wearable health data from vendor schemas to Open mHealth schemas"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "JupyterHealth Exchange contributors"},
]
keywords = ["health", "open-mhealth", "wearables", "fhir", "schema-conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "jsonschema>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/surfdoc/omh-shim"
Issues = "https://github.com/surfdoc/omh-shim/issues"

[tool.setuptools.packages.find]
include = ["omh_shim*"]

[tool.setuptools.package-data]
"omh_shim.schemas" = ["*.json", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
