[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omh-shim"
version = "1.4.0"
description = "Convert wearable health data from vendor schemas to Open mHealth schemas"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "JupyterHealth Exchange contributors"},
]
keywords = ["health", "open-mhealth", "wearables", "fhir", "schema-conversion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "jsonschema>=4.18,<5.0",
    "referencing>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.15,<0.16",  # keep in lockstep with .pre-commit-config.yaml's ruff rev
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[project.urls]
Repository = "https://github.com/jupyterhealth/omh-shim"
Issues = "https://github.com/jupyterhealth/omh-shim/issues"

[tool.setuptools.packages.find]
include = ["omh_shim*"]

[tool.setuptools.package-data]
"omh_shim.schemas" = ["**/*.json", "*.json", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["omh_shim", "tools"]
strict = true
ignore_missing_imports = true  # referencing, jsonschema have partial stubs

# The version above is bumped in the PR that opens a release (kept in sync with
# omh_shim/__init__.py and [tool.tbump.version].current below). To cut a release,
# move CHANGELOG's [Unreleased] entries to [X.Y.Z] and push the matching vX.Y.Z
# tag — the release.yaml workflow builds and publishes to PyPI on the tag.
[tool.tbump]
github_url = "https://github.com/jupyterhealth/omh-shim"

[tool.tbump.version]
current = "1.4.0"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "omh_shim/__init__.py"
